package org.fudan.asdt2023.i;

public interface CommandExecutionObserver {
    void onCommandExecuted(ICommand command);
}
