package org.fudan.asdt2023.modules.log;

import org.fudan.asdt2023.i.CommandExecutionObserver;
import org.fudan.asdt2023.i.ICommand;

public class LogManager implements CommandExecutionObserver {
    @Override
    public void onCommandExecuted(ICommand command) {

    }
}
